# muEmacs

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  interactive_stress_test.exp  main.c
.github/workflows/: build.yml
config/editor/: settings.json
config/keymaps/: arch-dev.keymap  vscode.keymap
config/shell/: powershell_profile.ps1
config/terminal/kitty/: uemacs-optimized.conf
docs/: BUILDING.md  DEVELOPMENT.md
docs/reference/: commands.hlp
include/: config.h
include/internal/: c23_compat.h  config.h.in  display_ops.h  ebind.h  edef.h  efunc.h  epath.h  error.h  estruct.h  file_utils.h  git_status.h  line.h  memory.h  nfa.h  plugin.h  profiler.h  string_safe.h  string_utils.h  terminal_capability.h  transactions.h  undo.h  utf8.h  util.h  version.h
include/μemacs/: atomic_terminal.h  buffer_utils.h  cbuf_dispatch.h  command_hooks.h  core.h  display_matrix.h  events.h  functions.h  gapbuffer.h  globals.h  keymap.h  string_utils.h  terminal_ops.h  utf8_optimized.h  window_hash.h
packaging/: ICON_ATTRIBUTION.txt  PACKAGING_STATUS.md  PKGBUILD  uemacs.1  uemacs.desktop
packaging/debian/: changelog  control  copyright  rules
scripts/: cs23_linter.py  run_ci.sh
src/config/: bind.c  eval.c  exec.c  names.c
src/core/: basic.c  buffer.c  cbuf_dispatch.c  command_hooks.c  display.c  display_matrix.c  events.c  gapbuffer.c  globals.c  keymap.c  line.c  main.c  plugin.c  sample_plugin.c  transactions.c  undo.c  undo_persist.c  window.c  window_hash.c
src/io/: crypt.c  file.c  fileio.c  input.c  lock.c  pklock.c
src/platform/: linux-modern.c  spawn.c
src/terminal/: atomic_terminal.c  capability.c  display_ops.c  modern-term.c  winsize.c
src/terminal/drivers/: posix.c  termcap.c
src/text/: boyer_moore.c  boyer_moore.h  isearch.c  nfa.c  random.c  region.c  search.c  word.c
src/util/: buffer_utils.c  display_width.c  display_width.h  error.c  file.c  git_status.c  git_status.h  memory.c  profiler.c  string.c  string_enhanced.c  string_missing.c  usage.c  utf8.c  version.c
tests/: full_integration_test.c  keymap_validation.exp  phase1_core_ops.exp  phase2_navigation.exp  phase3_selection.exp  phase4_linus_keybinds.exp  phase5_undo_redo.exp  phase_paste_bracketed.exp  test_advanced_text_ops.c  test_advanced_text_ops.h  test_api.c  test_api.h  test_atomic_stats.c  test_atomic_stats.h  test_boyer_moore.c  test_boyer_moore.h  test_config_engine.c  test_config_engine.h  test_error_conditions.c  test_error_conditions.h  test_external_integrations.c  test_external_integrations.h  test_extreme_stress.c  test_extreme_stress.h  test_fileio_robustness.c  test_fileio_robustness.h  test_fileio_stub.c  test_keymap.c  test_keymap.h  test_nfa.c  test_nfa.h  test_paste.c  test_paste.h  test_performance_stress.c  test_performance_stress.h  test_phase1_core_ops.c  test_phase1_core_ops.h  test_phase2_navigation.c  test_phase2_navigation.h  test_phase3_selection.c  (+32 more)
tests/bench/: editor_bench.c  search_bench.c
tests/data/: performance_results.txt  poe-collected-works.txt  utf8-demo.txt
